# hse-rust

./: 2024_project1.html  Cargo.toml  PROJECT1.md  PROJECT2.md  README.md
.github/workflows/: main.yml  sync-forks.yml
problems/basics/bracket_sequence/src/: lib.rs
problems/basics/fibonacci/src/: lib  lib.rs
problems/basics/palindrome/src/: lib  lib.rs
problems/basics/prime_numbers/src/: lib.rs
problems/cargo/cargo/src/: config.rs  lib.rs  trait.rs
problems/cargo/cargo/tests/: tests.json
problems/iterators/basics/src/: lib.rs
problems/iterators/flatten2/src/: lib.rs
problems/iterators/shrek/src/: lib  lib.rs
problems/iterators/split/src/: lib.rs
problems/net/chat/src/: lib.rs
problems/net/roshambo/src/: lib.rs
problems/ownership/add_references/src/: lib.rs
problems/projects/mmv/: Cargo.toml
problems/projects/tasksolver/: Cargo.toml  README.md  create_task.json  get_status.json  test  test.c  test.rs
problems/projects/tasksolver/src/: lib.rs  main.rs
problems/projects/tasksolver/src/file_executer/: file_executer.rs
problems/projects/tasksolver/src/input_parser/: input_parser.rs
problems/projects/tasksolver/src/server/: handlers.rs  mod.rs  models.rs  routes.rs  server.rs  server_structures.rs
problems/projects/tasksolver/src/worker_pool/: worker_pool.rs
problems/projects/tasksolver/tests/: integration_tests.rs
tools/rover/: Cargo.toml
tools/task_solver_client/: Cargo.toml  create_task.json  error_py.py  error_rust.rs  test  test.c  test.py  test_rust  test_rust.rs
tools/task_solver_client/src/: main.rs
(+31 files in other folders)
