[package]
name = "tasksolver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
warp = "0.3.7"
serde_json = "1.0.133"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
